--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   		<!-- Place favicon.ico in the root directory -->
 
   		<meta name="theme-color" content="#fafafa">
-  		<title>Scrollyteller Flourish template</title>
+  		<title>1114-foi-requests</title>
 	</head>
 
 	<body>
@@ -23,13 +23,14 @@
 
   		
 		<div id="app">
-			<h1>HED</h1>
-			<p class="subhead">TK TK TK</p>
+			<h1>Information requests jumped after NDP gained power in 2017</h1>
+			<!-- <p class="subhead">TK TK TK</p> -->
 			<div class="scrollyteller">
 				<div class="wrapper sticky">
 					<!-- chart -->
 					<div class="chart">
-						<iframe src='https://flo.uri.sh/story/975711/embed'frameborder='0' scrolling='no' style='width:100%;height:575px;'></iframe>
+
+						<iframe src='https://flo.uri.sh/story/1038245/embed'frameborder='0' scrolling='no' style='width:100%;height:500px;'></iframe>
 					</div>
 				
 					<!-- flourish logo -->
