--- a/src/index.html
+++ b/src/index.html
@@ -38,16 +38,17 @@
 				</div>
 				<ul class="step-list">
 					<li class="step" data>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <span class="benton-ital">Scroll for more...</span></p>
+						<p>This chart shows every freedom of information (FOI) request submitted to the provincial government from 2010 to Oct. 4, 2021. <span class="blue-01">‘General’</span> requests are those seeking information on government operations, data or other non-personal information.<br><br><span class="benton-ital">Scroll for more...</span></p>
 					</li>
 					<li class="step">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<p>We will remove ‘personal’ FOI requests from the analysis, since the Premier has said the current bill will not consider fees for personal information, only requests for government info.</p>
 					</li>
 					<li class="step">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <span class="blue-01">tempor incididunt</span> ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <span class="green-01">exercitation ullamco laboris</span> nisi ut aliquip ex ea commodo consequat.</p>
+						<p>Here we can see what kind of groups are filing FOI requests. <span class="blue-01">Political parties</span> have always made up a significant portion of requests. That jumped from 2018-2020, and is a key reason cited by the NDP for the need to limit FOI requests.</p>
 					</li>
 					<li class="step">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<p>The amendments could have a chilling effect on the many non-political groups that routinely request information from the government, including <span class="blue-03">individuals</span>, <span class="green-01">media</span> and <span class="grey-03">other</span> groups such as law firms, businesses, researchers and others.</p>
+						<p>Requests from non-political parties have not increased alongside those form political parties, leading some critics to suggest that the public will be the ones paying the price over a fight between political parties.</p>
 					</li>
 				</ul>
 			</div>
